integrate fb login

--- a/lessons/06-css-development-style/twotter/views/home.handlebars
+++ b/lessons/06-css-development-style/twotter/views/home.handlebars
@@ -22,7 +22,7 @@
     </div>
 
     <div class="fakeTwote" style="display:none;">
-        <p class="text">{{text}}</p></br>
+        <p class="text">{{text}}</p>
         <p class="author">{{author}}</p>
         <button type="button" class="button delete">Delete</button>
     </div>
